# Heat_diffusion-cuda-mpi-std-thread

./: CMakeLists.txt  README.md
src/: Source.cpp  Source.cu  Source2.cu  complex.cpp  complex.cu  complex.cuh  input_image.cpp  input_image.cuh
